// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart component increment and decrement quantity 1`] = `
<div>
  <nav
    class="nav-bar"
  >
    <a
      class="logo"
      href="/shopping-cart"
    >
      auditty
    </a>
    <div>
      <a
        class="nav-link"
        href="/shopping-cart"
      >
        HOME
      </a>
      <a
        class="nav-link"
        href="/shopping-cart/music-shop"
      >
        MUSIC
      </a>
      <a
        class="nav-link"
        href="/shopping-cart/merch-shop"
      >
        MERCH
      </a>
      <a
        class="nav-link"
        href="/shopping-cart/sale-shop"
        style="color: red;"
      >
        SALE
      </a>
    </div>
    <a
      class="cart-logo"
      href="/shopping-cart/cart"
    >
      <img
        alt="cart"
        src="shopping-cart.png"
      />
      <div
        class="cart-badge visible"
        data-testid="cart-badge"
      >
        1
      </div>
    </a>
  </nav>
  <div
    class="cart"
  >
    <h2>
      Your Cart (
      1
      )
    </h2>
    <div
      class="cart-items-container"
    >
      <div
        class="cart-item"
      >
        <a
          href="/shopping-cart/details"
        >
          <img
            alt=""
            class="cart-item-img"
            src="mbdtf.jpg"
          />
        </a>
        <div
          class="quantity-control"
        >
          <button
            type="button"
          >
            -
          </button>
          <div
            class="quantity-label"
            data-testid="quantity-label"
          >
            1
          </div>
          <button
            type="button"
          >
            +
          </button>
          <img
            alt="remove"
            class="remove"
            src="trash.png"
          />
        </div>
        <div
          class="cart-title"
        >
          My Beautiful Dark Twisted Fantasy by Kanye West
        </div>
        <div
          class="cart-price"
        >
          $
          11.99
        </div>
      </div>
    </div>
    <div
      class="total"
    >
      <img
        alt=""
        class="total-cart-logo"
        src="shopping-cart-white.png"
      />
      $
      11.99
    </div>
  </div>
</div>
`;

exports[`Cart component remove cart item 1`] = `
<div>
  <nav
    class="nav-bar"
  >
    <a
      class="logo"
      href="/shopping-cart"
    >
      auditty
    </a>
    <div>
      <a
        class="nav-link"
        href="/shopping-cart"
      >
        HOME
      </a>
      <a
        class="nav-link"
        href="/shopping-cart/music-shop"
      >
        MUSIC
      </a>
      <a
        class="nav-link"
        href="/shopping-cart/merch-shop"
      >
        MERCH
      </a>
      <a
        class="nav-link"
        href="/shopping-cart/sale-shop"
        style="color: red;"
      >
        SALE
      </a>
    </div>
    <a
      class="cart-logo"
      href="/shopping-cart/cart"
    >
      <img
        alt="cart"
        src="shopping-cart.png"
      />
      <div
        class="cart-badge hidden"
      />
    </a>
  </nav>
  <div
    class="cart"
  >
    <h2>
      Your Cart (
      0
      )
    </h2>
    <div
      class="cart-items-container"
    />
    <div
      class="total"
    >
      <img
        alt=""
        class="total-cart-logo"
        src="shopping-cart-white.png"
      />
      $
      0.00
    </div>
  </div>
</div>
`;

exports[`Cart component renders Cart 1`] = `
<div>
  <nav
    class="nav-bar"
  >
    <a
      class="logo"
      href="/shopping-cart"
    >
      auditty
    </a>
    <div>
      <a
        class="nav-link"
        href="/shopping-cart"
      >
        HOME
      </a>
      <a
        class="nav-link"
        href="/shopping-cart/music-shop"
      >
        MUSIC
      </a>
      <a
        class="nav-link"
        href="/shopping-cart/merch-shop"
      >
        MERCH
      </a>
      <a
        class="nav-link"
        href="/shopping-cart/sale-shop"
        style="color: red;"
      >
        SALE
      </a>
    </div>
    <a
      class="cart-logo"
      href="/shopping-cart/cart"
    >
      <img
        alt="cart"
        src="shopping-cart.png"
      />
      <div
        class="cart-badge hidden"
      />
    </a>
  </nav>
  <div
    class="cart"
  >
    <h2>
      Your Cart (
      0
      )
    </h2>
    <div
      class="cart-items-container"
    />
    <div
      class="total"
    >
      <img
        alt=""
        class="total-cart-logo"
        src="shopping-cart-white.png"
      />
      $
      0.00
    </div>
  </div>
</div>
`;

exports[`Cart component renders Cart with item 1`] = `
<div>
  <nav
    class="nav-bar"
  >
    <a
      class="logo"
      href="/shopping-cart"
    >
      auditty
    </a>
    <div>
      <a
        class="nav-link"
        href="/shopping-cart"
      >
        HOME
      </a>
      <a
        class="nav-link"
        href="/shopping-cart/music-shop"
      >
        MUSIC
      </a>
      <a
        class="nav-link"
        href="/shopping-cart/merch-shop"
      >
        MERCH
      </a>
      <a
        class="nav-link"
        href="/shopping-cart/sale-shop"
        style="color: red;"
      >
        SALE
      </a>
    </div>
    <a
      class="cart-logo"
      href="/shopping-cart/cart"
    >
      <img
        alt="cart"
        src="shopping-cart.png"
      />
      <div
        class="cart-badge visible"
        data-testid="cart-badge"
      >
        1
      </div>
    </a>
  </nav>
  <div
    class="cart"
  >
    <h2>
      Your Cart (
      1
      )
    </h2>
    <div
      class="cart-items-container"
    >
      <div
        class="cart-item"
      >
        <a
          href="/shopping-cart/details"
        >
          <img
            alt=""
            class="cart-item-img"
            src="mbdtf.jpg"
          />
        </a>
        <div
          class="quantity-control"
        >
          <button
            type="button"
          >
            -
          </button>
          <div
            class="quantity-label"
            data-testid="quantity-label"
          >
            1
          </div>
          <button
            type="button"
          >
            +
          </button>
          <img
            alt="remove"
            class="remove"
            src="trash.png"
          />
        </div>
        <div
          class="cart-title"
        >
          My Beautiful Dark Twisted Fantasy by Kanye West
        </div>
        <div
          class="cart-price"
        >
          $
          11.99
        </div>
      </div>
    </div>
    <div
      class="total"
    >
      <img
        alt=""
        class="total-cart-logo"
        src="shopping-cart-white.png"
      />
      $
      11.99
    </div>
  </div>
</div>
`;
